Add incomplete OpenID Connect example
The example is incomplete, as there is currently no session management for OpenID in the openidconnect_rs crate aaaand it is still in need of a lot of refinements.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ edition = "2018"
 
 
 [workspace]
-members = ["examples/simple"]
+members = ["examples/simple", "examples/openid_connect"]
 
 [dependencies]
-rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", default-features = false, features = ["private-cookies"] }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "45b4436", default-features = false, features = ["private-cookies"] }
 log = "0.4"
 yansi = "0.5"
