--- a/examples/openid_connect/Cargo.toml
+++ b/examples/openid_connect/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "45b4436", default-features = false, features = ["private-cookies"] }
 rocket_airlock = { path = "../../" }
 openidconnect = { git = "https://github.com/ramosbugs/openidconnect-rs", rev = "cf39a6d" }
-log = "0.4"
 anyhow = "1.0"
+dotenv = "0.15"
+log = "0.4"
