--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocket_airlock"
-version = "0.1.0"
+version = "0.1.1"
 description = """TL;DR: Authentication and Authorization for rocket applications.
 
 The security airlock is the entry point to a rocket. Everything from the outside environment
@@ -19,6 +19,6 @@ edition = "2018"
 members = ["examples/simple", "examples/openid_connect"]
 
 [dependencies]
-rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "45b4436", default-features = false, features = ["private-cookies"] }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "0c150c2", default-features = false, features = ["secrets"] }
 log = "0.4"
 yansi = "0.5"
