--- a/examples/simple/Rocket.toml
+++ b/examples/simple/Rocket.toml
@@ -1,10 +1,10 @@
-[development]
+[debug]
 domain = "http://localhost:8000"
-address = "localhost"
+address = "127.0.0.1"
 port = 8000
 keep_alive = 5
 log = "normal"
 limits = { forms = 32768 }
 
-[development.airlock.simple]
+[debug.airlock.simple]
 valid_user = "Daniel"
