--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "simple"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
 publish = false
 edition = "2018"
 
 [dependencies]
-rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "c24f15c", default-features = false, features = ["secrets"] }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["secrets"] }
 rocket_airlock = { path = "../../" }
-serde = "1.0.123"
+serde = "1.0.124"
 log = "0.4.14"
