--- a/examples/openid_connect/Cargo.toml
+++ b/examples/openid_connect/Cargo.toml
@@ -6,8 +6,8 @@ publish = false
 edition = "2018"
 
 [dependencies]
-rocket = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["secrets"] }
+rocket = { version = "0.5.0-rc.1", default-features = false, features = ["secrets"] }
 rocket_airlock = { path = "../../" }
-openidconnect = "2.0.0-beta.1"
+openidconnect = "2.1.0"
 anyhow = "1.0.38"
 log = "0.4.14"
