--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocket_airlock"
-version = "0.2.2"
+version = "0.3.0-rc.1"
 description = """TL;DR: Authentication and Authorization for rocket applications.
 
 The security airlock is the entry point to a rocket. Everything from the outside environment
