--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -3,10 +3,10 @@ name = "simple"
 version = "0.2.2"
 authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
 publish = false
-edition = "2018"
+edition = "2021"
 
 [dependencies]
-rocket = { version = "0.5.0-rc.1", default-features = false, features = ["secrets"] }
+rocket = { version = "0.5.1", default-features = false, features = ["secrets"] }
 rocket_airlock = { path = "../../" }
 serde = "1.0.124"
 log = "0.4.14"
