Consume and return `Rocket<Build>` in `Hatch::from` and `Communicator::from`. This enables an implementor of those traits to modify the rocket instance in the same way it is possible in a `Fairing`.

--- a/examples/openid_connect/Cargo.toml
+++ b/examples/openid_connect/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 rocket = { version = "0.5.1", default-features = false, features = ["secrets"] }
 rocket_airlock = { path = "../../" }
+serde = "1.0.204"
 openidconnect = "2.1.0"
 anyhow = "1.0.38"
+thiserror = "1.0.63"
 log = "0.4.14"
