--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 rocket = { version = "0.5.1", default-features = false, features = ["secrets"] }
 rocket_airlock = { path = "../../" }
 serde = "1.0.124"
+anyhow = "1.0.38"
+thiserror = "1.0.63"
 log = "0.4.14"
